--- a/_includes/externals/scripting.html
+++ b/_includes/externals/scripting.html
@@ -1,2 +1,2 @@
-<script src="{{ "/assets/vendor/highlight/highlight.pack.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/vendor/highlight/highlight.pack.js" | prepend: site.github.url }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
